# noteslib

./: LICENSE  README.md  noteslib.py  pyproject.toml
doc/: README.md
docs/: conf.py  core.rst  doc.rst  index.rst
src/noteslib/: __init__.py  core.py  db.py  doc.py  doccoll.py  enums.py  exceptions.py
tests/: conftest.py  test_core.py  test_doc.py  test_doccoll.py
