[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noteslib"
authors = [{name="Robert Follek", email="bfollek@gmail.com"}]
maintainers = [{name="Marcelo Huerta", email="richieadler@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.8"
license = "MIT"
dependencies = [
	"pywin32",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Win32 (MS Windows)",
	"Intended Audience :: Developers",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Database",
	"Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.hatch.version]
path = "src/noteslib/__init__.py"

[tool.hatch.envs.test]
platforms = ["windows"]
python = "D:/Prog/Python38-32/python.exe"
dependencies = [
	"lxml",
	"pytest",
	"pytest-cov",
	"pytest-check",
	"wmi",
]

[tool.hatch.envs.test.scripts]
test = "pytest --cov=src/noteslib --cov-report=term-missing tests"
test-v = "pytest -vv --cov=src/noteslib --cov-report=term-missing tests"

[tool.hatch.envs.lint]
platforms = ["windows"]
python = "D:/Prog/Python38-32/python.exe"
dependencies = [
	"black",
	"isort",
	"pylint",
]

[tool.hatch.envs.lint.scripts]
check = [
	"isort --check-only --diff src",
	"pylint src",
	"black --check --diff src",
]
