[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "noteslib"
author = "Robert Follek"
author-email = "bfollek@gmail.com"
maintainer = "Marcelo Huerta"
maintainer-email = "richieadler@gmail.com"
description-file = "README.md"
requires-python = ">=3.7"
requires = [
	"pywin32",
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Win32 (MS Windows)",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Database",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
